--- a/src/views/components/ChatForm/ChatForm.module.scss
+++ b/src/views/components/ChatForm/ChatForm.module.scss
@@ -22,6 +22,7 @@
         grid-template-columns: 8fr 2fr;
         border: solid 1px black;
         border-radius: 500px;
+        height: $chat-form-height;
 
         .textInput,
         .buttonWrap button {
