:lipstick: global variables를 변경하라

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,9 @@
 $mobile: 768px;
 $iphone: 375px;
 
-$page-text-color: #000;
+$page-text-color: #1B1A57;
 $page-bg-color: #fff;
 
 $page-max-width: 768px;
+
+$service-main-color: #2F80ED;
