--- a/src/views/components/ChatBody/ChatBody.module.scss
+++ b/src/views/components/ChatBody/ChatBody.module.scss
@@ -6,4 +6,8 @@
     grid-template-columns: 1fr;
     grid-row-gap: 14px;
     margin-bottom: $chat-form-height + 14px;
+
+    max-width: $page-max-width;
+    margin: 0 auto;
+    padding: 0 21px;
 }
