--- a/src/views/components/ChatBody/ChatBody.module.scss
+++ b/src/views/components/ChatBody/ChatBody.module.scss
@@ -5,9 +5,8 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap: 14px;
-    margin-bottom: $chat-form-height + 14px;
 
     max-width: $page-max-width;
     margin: 0 auto;
-    padding: 0 21px;
+    padding: 0 21px $chat-form-height + 14px 21px;
 }
