:art: line-color 상수를 추가하라

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,5 +7,7 @@ $page-bg-color: #fff;
 $page-max-width: 768px;
 
 $service-main-color: #2F80ED;
+$service-line-color: #EDEDED;
+$service-second-color: #4F5E7B;
 
 $chat-form-height: 71px;
