:art: 전역 상수가 적용되지 않은 컴포넌트들에 상수를 적용하라

--- a/src/views/components/ChatBubble/ChatBubble.module.scss
+++ b/src/views/components/ChatBubble/ChatBubble.module.scss
@@ -88,7 +88,7 @@
                     button {
                         min-width: 100%;
                         border: solid 1px $service-main-color;
-                        background-color: #fff;
+                        background-color: $page-bg-color;
                         padding: 4px 7.25px;
                         border-radius: 5px;
                         word-break: keep-all;
