--- a/src/views/components/UserInfo/UserInfo.module.scss
+++ b/src/views/components/UserInfo/UserInfo.module.scss
@@ -11,6 +11,7 @@
     grid-column-gap: 13px;
     line-height: 100%;
     align-items: center;
+    background-color: $page-bg-color;
 
     .imgWrap {
         grid-row: 1 / 3;
