--- a/src/views/components/ChatForm/ChatForm.module.scss
+++ b/src/views/components/ChatForm/ChatForm.module.scss
@@ -12,7 +12,7 @@
     width: 100vw;
     border-top: solid 1px #F0F0F0;
     height: $chat-form-height;
-    background-color: #fff;
+    background-color: $page-bg-color;
 
     .debug {
         display: flex;
