:lipstick: chat-bubble에 \t 와 같은 이스케이프 문자가 작동하도록 설정하라

--- a/src/views/components/ChatBubble/ChatBubble.module.scss
+++ b/src/views/components/ChatBubble/ChatBubble.module.scss
@@ -45,6 +45,7 @@
             min-width: 20%;
             max-width: 68%;
             border-radius: 8px;
+            white-space: pre-line;
     
             .name {
                 color: orange;
