:lipstick: 단일 버튼일 경우, 버튼의 너비를 100%로 설정하라

--- a/src/views/components/ChatBubble/ChatBubble.module.scss
+++ b/src/views/components/ChatBubble/ChatBubble.module.scss
@@ -65,6 +65,10 @@
                 }
 
                 &.MIXIN li {
+                    &:only-child {
+                        width: 100%;
+                    }
+
                     width: 50%;
                 }
                 
