:lipstick: Debug Form의 위치를 이동시켜라
form의 위치를 body로 이동시켰습니다.
아이템을 다시 수직 정렬로 변경했습니다.
컨텐츠를 가리는것을 막기 위하여 투명도를 50%로 변경했습니다.

--- a/src/views/components/ChatForm/ChatForm.module.scss
+++ b/src/views/components/ChatForm/ChatForm.module.scss
@@ -15,9 +15,16 @@
     background-color: $page-bg-color;
 
     .debug {
-        display: flex;
-        // display: none;
-        align-items: center;
+        position: fixed;
+        top: 60px;
+        right: 0;
+        text-align: left;
+        opacity: 0.5;
+
+        textarea {
+            height: 120px;
+            resize: vertical;
+        }
     }
 
     .none {
